tests/unit/setup.js
// Jest setup file for unit tests
// This file runs before all tests

// Add custom matchers or global setup here if needed
global.console = {
  ...console,
  // Suppress console errors during tests if needed
  // error: jest.fn(),
  // warn: jest.fn(),
};




